added route for home directory, will return template with instructions instead of 404

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous"
+  />
     <title>Flask API URL</title>
   </head>
-  <body></body>
+  <body>
+    <div className="container">
+      <div className="jumbotron text-center">
+        <p className="font-weight-bold">
+          <h3>Flask API Template</h3>
+        </p>
+        <p>
+          This is the main URL for the API endpoints. Please see the README in the
+          repo for instructions on testing or using the API endpoints.
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
