specified base url

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
           <h3>Flask API Template</h3>
         </p>
         <p>
-          This is the main URL for the API endpoints. Please see the README in the
+          This is the base URL for the API endpoints. Please see the README in the
           repo for instructions on testing or using the API endpoints.
         </p>
       </div>
