Changed project name to Flask API Boilerplate.

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,13 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous"
   />
-    <title>Flask API Template</title>
+    <title>Flask API Boilerplate</title>
   </head>
   <body>
     <div className="container">
       <div className="jumbotron text-center">
         <p className="font-weight-bold">
-          <h3>Flask API Template</h3>
+          <h3>Flask API Boilerplate</h3>
         </p>
         <p>
           This is the base URL for the API endpoints. Please see the README in the
